# tgtg-discord-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.arm64  Dockerfile.armhf  README.md  requirements.txt
.github/: dependabot.yml
.github/workflows/: audit.yml  build.yml  package.yaml  publish.yml
migrations/: 20220301134633_bot.sql
src/: commands.rs  data.rs  db.rs  main.rs  monitor.rs  signal.rs  tgtg.rs
src/discord/: commands.rs  framework.rs  mod.rs
