[package]
name = "tgtg-discord-bot"
version = "0.1.0"
authors = ["Gokberk Kocak <gokberkkocak@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
serenity = { version = "0.11", features = ["cache", "framework", "standard_framework", "rustls_backend"] }
tokio = { version = "1.18", features = ["macros", "signal", "rt-multi-thread"] }
pyo3 = { version = "0.16", features = ["auto-initialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-native-tls"] }