[package]
name = "tgtg-discord-bot"
version = "0.1.0"
authors = ["Gokberk Kocak <gokberkkocak@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
serenity = { version = "0.11", features = ["cache", "framework", "standard_framework", "rustls_backend"] }
tokio = { version = "1.29", features = ["macros", "signal", "rt-multi-thread"] }
pyo3 = { version = "0.18", features = ["auto-initialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-native-tls"] }
regex = "1.8"
chrono = { version = "0.4", default-features = false, features = ["std"] }
chrono-tz = { version = "0.8", features = ["serde"] }